--- a/stylehub.css
+++ b/stylehub.css
@@ -66,6 +66,7 @@ body {
     text-decoration: none;
     padding-top:60px;
     transition:0.5s;
+    line-height: 2.5;
     
 }
 .side-nav a{
@@ -159,6 +160,7 @@ p{
     margin-right: 13%;
     margin-left:13%;
     font-style: italic;
+    line-height:1.5;
     
 }
 
@@ -182,6 +184,7 @@ p{
 .event{
     margin-left: 28%;
     list-style: none;
+    line-height:1.5;
 }
 
 /*section-c*/
@@ -271,11 +274,14 @@ p{
     padding-top:30px;
     margin-top:20px;
     margin-left:30%;
+    line-height:1.5;
 }
 
 .wed{
     float:left;
     color:#fff;
+    line-height: 1.5;
+
 }
 /* box f2 */
 
@@ -285,6 +291,7 @@ p{
     padding-bottom:10%;
     height:80vh;
     margin:0;
+    line-height:1.5;
 }
 .li{
     list-style:none ;
@@ -322,6 +329,7 @@ p{
     width:80%;
     margin-right:10%;
     margin-left:10%;
+    line-height: 1.5;
 }
 
 
@@ -331,6 +339,7 @@ p{
     width:80%;
     margin-right:10%;
     margin-left:10%;
+    line-height: 1.5;
 }
 .menu-container3{
     list-style: none;
@@ -338,6 +347,7 @@ p{
     width:80%;
     margin-right:10%;
     margin-left:10%;
+    line-height: 1.5;
 }
 .main{
     text-align: center;
@@ -345,10 +355,6 @@ p{
     animation-name:main-dishes1;
     animation-duration: 4s;
 
-}
-@keyframes main-dishes1{
-    0% {left: -20px}
-    100% {left: 20px}
 }
 .main-dishes1{
     margin-top:20px;
@@ -373,6 +379,9 @@ p{
     color:#fff;
     
 }
+/* .last{
+    width:200%;
+} */
 
 
 
@@ -386,6 +395,7 @@ p{
     margin-right:13%;
     margin-left:13%;
     text-align: center;
+    line-height: 1.5;
 }
 .column{
     margin-top: 10%;
@@ -394,9 +404,11 @@ p{
 .service{
     margin-left:5%;
     color:brown;
+    
 }
 .list{
     margin-right: 3%;
+    line-height:1.5;
 }
 .first{
     float:right;
@@ -537,6 +549,7 @@ font-size: 4rem;
 position:relative;
 animation:content2;
 animation-duration:4s;
+line-height: 1.5;
 }
 
 @keyframes content2 {
@@ -558,7 +571,8 @@ animation-duration:4s;
     position:relative;
     animation:main-content;
     animation-duration:4s;
-    animation-fill-mode: forwards;   
+    animation-fill-mode: forwards;
+    line-height: 1.5;   
 }
 @keyframes main-content {
     0% {left: -1000px;}
@@ -585,6 +599,7 @@ transition-duration:1s;
     animation:chapter3;
     animation-duration:4s;
     animation-fill-mode: forwards;
+    line-height: 1.5;
 
 }
 @keyframes chapter3 {
